--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,30 @@ body {
   margin-bottom: 32px;
 }
 
+
+.education {
+  margin: auto;
+  max-width: 100%;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding-top: 120px;
+}
+
+.education-grid {
+  display: block;
+  width: 100%;
+  max-width: 72%;
+}
+
+.education h2 {
+  margin: 0px;
+  padding-top: 8px;
+  font-family: 'Work Sans Semi-Bold', sans-serif;
+  font-size: 32px;
+  color: #17223b;
+  text-align: left;
+  margin-bottom: 32px;
+}
 .underline-magical-sub-header {
   padding: 4px;
   padding-bottom: 6px;
@@ -342,12 +366,22 @@ body {
   transition: 0.6s cubic-bezier(0.2, 0.8, 0.2, 1);
   filter: grayscale(0.20);
 }
-
+.education img {
+  width: 100%;
+  max-width: 320px;
+  height: inherit;
+  border-radius: 8px;
+  transition: 0.6s cubic-bezier(0.2, 0.8, 0.2, 1);
+  filter: grayscale(0.20);
+}
 .about img:hover {
   box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.1);
   filter: grayscale(0);
 }
-
+.education img:hover {
+  box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.1);
+  filter: grayscale(0);
+}
 .about p {
   margin: 0px;
   padding-top: 18px;
@@ -357,7 +391,15 @@ body {
   text-align: left;
   line-height: 2.0;
 }
-
+.education p {
+  margin: 0px;
+  padding-top: 18px;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 20px;
+  color: #17223b;
+  text-align: left;
+  line-height: 2.0;
+}
 .about a {
   margin: 0px;
   padding-top: 18px;
@@ -366,7 +408,14 @@ body {
   color: #1565c0;
   line-height: 2.0;
 }
-
+.education a {
+  margin: 0px;
+  padding-top: 18px;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 20px;
+  color: #1565c0;
+  line-height: 2.0;
+}
 .about h4 {
   margin: 0px;
   padding-top: 40px;
@@ -376,7 +425,15 @@ body {
   text-align: left;
   line-height: 2.0;
 }
-
+.education h4 {
+  margin: 0px;
+  padding-top: 40px;
+  font-family: 'Work Sans Medium', sans-serif;
+  font-size: 22px;
+  color: #17223b;
+  text-align: left;
+  line-height: 2.0;
+}
 .about b {
   margin: 0px;
   padding: 8px;
@@ -388,8 +445,30 @@ body {
   background-color: #f0f0f0;
   border-radius: 4px;
 }
-
+.education b {
+  margin: 0px;
+  padding: 8px;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 20px;
+  color: #d32f2f;
+  text-align: left;
+  line-height: 2.0;
+  background-color: #f0f0f0;
+  border-radius: 4px;
+}
 .about ul {
+  font-family: 'Varela Round', sans-serif;
+  font-size: 20px;
+  color: #17223b;
+  text-align: left;
+  line-height: 2.5;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  padding-top: 16px;
+  padding-left: 4px;
+}
+.education ul {
   font-family: 'Varela Round', sans-serif;
   font-size: 20px;
   color: #17223b;
@@ -670,18 +749,15 @@ body {
     padding: 0;
   }
   
+
 .education {
     margin: auto;
     max-width: 100%;
     margin-left: 24px;
     padding-top: 100px;
-    margin-left: 40px;
-    margin-right: 40px;
-    padding-top: 120px;
   }
 
   .education-grid {
-    display: block;
     width: 100%;
     max-width: 90%;
   }
@@ -690,7 +766,7 @@ body {
     margin: 0px;
     padding-top: 18px;
     font-family: 'Varela Round', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     color: #17223b;
     text-align: left;
     line-height: 2.0;
@@ -707,15 +783,6 @@ body {
     border-radius: 2px;
   }
 
-  .education h2 {
-    margin: 0px;
-    padding-top: 8px;
-    font-family: 'Work Sans Semi-Bold', sans-serif;
-    font-size: 32px;
-    color: #17223b;
-    text-align: left;
-    margin-bottom: 32px;
-}
   .education h4 {
     margin: 0px;
     padding-top: 40px;
@@ -754,7 +821,6 @@ body {
     margin: 0;
     padding: 0;
   }
-
   .button {
     margin-top: 32px;
     background-color: #e53935;
