--- a/css/antiportfolio.css
+++ b/css/antiportfolio.css
@@ -36,7 +36,7 @@ body {
   line-height: 1.8;
 }
 
-.projects{
+.projects11{
   max-width: 75%;
   padding-left: 4px;
   padding-right: 4px;
@@ -49,11 +49,11 @@ body {
   background-color: #101010;
 }
 
-.projects:hover{
+.projects11:hover{
   background-color: rgba(98, 117, 127, 0.15);
 }
 
-.projects h1{
+.projects11 h1{
   font-family: 'Roboto Mono', monospace;
   font-size: 32px;
   color: #c62828;
@@ -82,7 +82,7 @@ body {
   letter-spacing: 0.1em;
 }
 
-.projects p{
+.projects11 p{
   font-family: 'Roboto Mono', monospace;
   font-size: 20px;
   color: #90a4ae;
@@ -92,11 +92,11 @@ body {
   padding-bottom: 48px;
 }
 
-.projects a {
+.projects11 a {
   text-decoration: none;
 }
 
-.projects img{
+.projects11 img{
   padding-top: 40px;
   max-width: 330px;
   height: inherit;
