--- a/new-website/css/style.css
+++ b/new-website/css/style.css
@@ -127,7 +127,7 @@ body {
 }
 
 /* Personal Info on landing Ending */
-.ux-design {
+.projects {
   margin: auto;
   max-width: 80%;
   margin-left: 40px;
@@ -137,7 +137,7 @@ body {
   margin-top: 72px;
 }
 
-.ux-design h2 {
+.projects h2 {
   margin: 0px;
   /* padding-top: 8px; */
   font-family: 'Work Sans Semi-Bold', sans-serif;
@@ -147,7 +147,7 @@ body {
   /* margin-bottom: 24px; */
 }
 
-.ux-design p {
+.projects p {
   margin: 0px;
   padding-top: 24px;
   font-family: 'Varela Round', sans-serif;
@@ -159,7 +159,7 @@ body {
   margin-bottom: 32px;
 }
 
-.ux {
+.prjts {
   display: grid;
   grid-column-gap: 16px;
   grid-row-gap: 56px;
@@ -173,7 +173,7 @@ body {
   grid-template-rows: repeat(auto, minmax(auto, 100px));
 }
 
-.ux-project {
+.sub-project {
   margin: 0px;
   background-color: white;
   border-radius: 8px;
@@ -184,18 +184,18 @@ body {
   transition: 0.3s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
-.ux-project a {
+.sub-project a {
   text-decoration: none;
 }
 
-.ux-project:hover {
+.sub-project:hover {
   transform: scale(1.02);
   border-radius: 2px;
   box-shadow: 0 2px 16px #e0e0e0;
   opacity: 1;
 }
 
-.ux-image {
+.projects-image {
   display: block;
   width: 360px;
   height: 280px;
@@ -203,7 +203,7 @@ body {
   transition: 0.3s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
-.ux-image:hover {
+.projects-image:hover {
   border-radius: 4px 4px 0 0;
 }
 
@@ -384,7 +384,7 @@ body {
     line-height: 1.5;
   }
 
-  .projects {
+  .projects11 {
     margin: auto;
     margin-left: 24px;
     max-width: 90%;
@@ -433,7 +433,7 @@ body {
     color: #727272;
   }
 
-  .ux-design {
+  .projects {
     margin: auto;
     max-width: 90%;
     margin-left: 24px;
@@ -441,7 +441,7 @@ body {
     margin-bottom: 48px;
   }
 
-  .ux-design p {
+  .projects p {
     margin: 0px;
     padding-top: 20px;
     font-family: 'Varela Round', sans-serif;
@@ -453,7 +453,7 @@ body {
     margin-bottom: 32px;
   }
 
-  .ux {
+  .prjts {
     display: grid;
     grid-column-gap: 16px;
     grid-row-gap: 56px;
@@ -465,7 +465,7 @@ body {
     grid-template-rows: repeat(auto, minmax(auto, 100px));
   }
 
-  .ux-project {
+  .sub-project {
     box-shadow: 0px 2px 4px #cfcfcf;
     opacity: 1;
   }
