--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,7 @@ body {
   grid-template-rows: repeat(auto, minmax(auto, 100px));
 }
 
-.sub-project {
+.sub-projects {
   margin: 0px;
   background-color: white;
   border-radius: 8px;
@@ -442,11 +442,11 @@ body {
   transition: 0.3s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
-.sub-project a {
+.sub-projects a {
   text-decoration: none;
 }
 
-.sub-project:hover {
+.sub-projects:hover {
   transform: scale(1.02);
   border-radius: 2px;
   box-shadow: 0 2px 16px #e0e0e0;
@@ -516,8 +516,6 @@ body {
 .antiportfolio a {
   text-decoration: none;
 }
-
-
   .contacts {
   margin: auto;
   max-width: 100%;
@@ -546,7 +544,7 @@ body {
   border-radius: 8px;
   transition: 0.6s cubic-bezier(0.2, 0.8, 0.2, 1);
   filter: grayscale(0.20);
-  }
+}
   .contacts img:hover {
   box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.1);
   filter: grayscale(0);
