--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ body {
   background-color: #f0f0f0;
   border-radius: 4px;
 }
-  .about a {
+  /*.about a {
   margin: 0px;
   padding-top: 18px;
   font-family: 'Varela Round', sans-serif;
@@ -261,7 +261,7 @@ body {
   padding: 0;
   padding-top: 16px;
   padding-left: 4px;
-}
+}*/
 .button {
   margin-top: 32px;
   background-color: #e53935;
@@ -329,6 +329,15 @@ body {
   text-align: left;
   margin-bottom: 32px;
     
+.education h4 {
+  margin: 0px;
+  padding-top: 20px;
+  font-family: 'Work Sans Medium', sans-serif;
+  font-size: 40px;
+  color: #17223b;
+  text-align: left;
+  line-height: 2.0;
+}
 .education img {
   width: 60%;
   max-width: 600px;
@@ -343,7 +352,32 @@ body {
   filter: grayscale(0);
 }
   
+.card-title {
+  margin: 0px;
+  padding-left: 16px;
+  padding-top: 16px;
+  padding-bottom: 12px;
+  padding-right: 8px;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 22px;
+  line-height: 1.5;
+  color: #424242;
+  text-transform: capitalize;
+}
 
+.card-subtitle {
+  margin: 0px;
+  font-family: 'Roboto-Medium', sans-serif;
+  font-size: 14px;
+  color: #9e9e9e;
+  text-align: left;
+  letter-spacing: 3px;
+  padding-left: 16px;
+  padding-bottom: 24px;
+  padding-right: 6px;
+  text-transform: uppercase;
+}
+/*
 .education p {
   margin: 0px;
   padding-top: 18px;
@@ -361,17 +395,6 @@ body {
   font-family: 'Varela Round', sans-serif;
   font-size: 20px;
   color: #1565c0;
-  line-height: 2.0;
-}
-  
-
-.education h4 {
-  margin: 0px;
-  padding-top: 20px;
-  font-family: 'Work Sans Medium', sans-serif;
-  font-size: 40px;
-  color: #17223b;
-  text-align: left;
   line-height: 2.0;
 }
   
@@ -400,10 +423,10 @@ body {
   padding: 0;
   padding-top: 16px;
   padding-left: 4px;
-}
+}*/
   
 /* Personal Info on landing Ending */
-.projects {
+.project-design {
   margin: auto;
   max-width: 80%;
   margin-left: 40px;
@@ -413,7 +436,7 @@ body {
   margin-top: 72px;
 }
 
-.projects h2 {
+.project-design h2 {
   margin: 0px;
   /* padding-top: 8px; */
   font-family: 'Work Sans Semi-Bold', sans-serif;
@@ -423,7 +446,7 @@ body {
   /* margin-bottom: 24px; */
 }
 
-.projects p {
+.project-design p {
   margin: 0px;
   padding-top: 24px;
   font-family: 'Varela Round', sans-serif;
@@ -435,7 +458,7 @@ body {
   margin-bottom: 32px;
 }
 
-.prjts {
+.prjt {
   display: grid;
   grid-column-gap: 16px;
   grid-row-gap: 56px;
@@ -449,7 +472,7 @@ body {
   grid-template-rows: repeat(auto, minmax(auto, 100px));
 }
 
-.sub-projects {
+.sub-project {
   margin: 0px;
   background-color: white;
   border-radius: 8px;
@@ -460,18 +483,18 @@ body {
   transition: 0.3s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
-.sub-projects a {
+.sub-project a {
   text-decoration: none;
 }
 
-.sub-projects:hover {
+.sub-project:hover {
   transform: scale(1.02);
   border-radius: 2px;
   box-shadow: 0 2px 16px #e0e0e0;
   opacity: 1;
 }
 
-.projects-image {
+.project-image {
   display: block;
   width: 360px;
   height: 280px;
@@ -479,7 +502,7 @@ body {
   transition: 0.3s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
-.projects-image:hover {
+.project-image:hover {
   border-radius: 4px 4px 0 0;
 }
 
@@ -509,8 +532,9 @@ body {
   text-transform: uppercase;
 }
 
+  /*
 .antiportfolio {
-  /* margin-left: 40px; */
+  /* margin-left: 40px;
   padding-top: 40px;
 }
 
@@ -533,7 +557,7 @@ body {
 
 .antiportfolio a {
   text-decoration: none;
-}
+}*/
   .contacts {
   margin: auto;
   max-width: 100%;
@@ -588,7 +612,7 @@ body {
   background-color: #f0f0f0;
   border-radius: 4px;
 }
-  .contacts a {
+ /* .contacts a {
   margin: 0px;
   padding-top: 18px;
   font-family: 'Varela Round', sans-serif;
@@ -618,7 +642,7 @@ body {
   padding: 0;
   padding-top: 16px;
   padding-left: 4px;
-}
+}*/
 
 
 #email {
@@ -790,6 +814,7 @@ body {
     padding-right: 6px;
   }
 
+  /*
   .about {
     margin: auto;
     max-width: 100%;
@@ -820,7 +845,8 @@ body {
     color: #d32f2f;
     text-align: left;
     /* line-height: 2.0; */
-    border-radius: 2px;
+   
+  /*border-radius: 2px;
   }
 
   .about h4 {
@@ -845,7 +871,7 @@ body {
     padding-bottom: 16px;
     /* padding-left: 4px; */
   }
-
+/*
   .about li {
     padding-bottom: 16px;
   }
@@ -892,7 +918,7 @@ body {
     font-size: 13px;
     color: #d32f2f;
     text-align: left;
-    /* line-height: 2.0; */
+    /* line-height: 2.0; 
     border-radius: 2px;
   }
 
@@ -916,7 +942,7 @@ body {
     padding: 0px;
     padding-top: 16px;
     padding-bottom: 16px;
-    /* padding-left: 4px; */
+    /* padding-left: 4px; 
   }
 
   .education li {
@@ -963,7 +989,7 @@ body {
     font-size: 13px;
     color: #d32f2f;
     text-align: left;
-    /* line-height: 2.0; */
+    /* line-height: 2.0; 
     border-radius: 2px;
   }
 
@@ -987,7 +1013,7 @@ body {
     padding: 0px;
     padding-top: 16px;
     padding-bottom: 16px;
-    /* padding-left: 4px; */
+    /* padding-left: 4px; 
   }
 
   .contacts li {
@@ -1017,7 +1043,7 @@ body {
     cursor: pointer;
     border: none;
     border-radius: 4px;
-  }
+  }*/
 
   .footer span {
     margin: auto;
