--- a/css/style.css
+++ b/css/style.css
@@ -793,16 +793,11 @@ body {
     padding: 0;
   }*/
   
-  .footer span {
+  /*.footer span {
     margin: auto;
     margin-left: 12px;
     margin-right: 12px;
-  }
-
-  .antiportfolio p {
-    font-size: 16px;
-    padding: 16px;
-  }
+  }*/
 }
 
 
