--- a/css/style.css
+++ b/css/style.css
@@ -353,12 +353,12 @@ body {
 /* Personal Info on landing Ending */
 .project-design {
   margin: auto;
-  max-width: 80%;
+  max-width: 100%;
   margin-left: 40px;
-  /* margin-right: 40px; */
-  padding-top: 100px;
-  margin-bottom: 48px;
-  margin-top: 72px;
+  margin-right: 40px;
+  padding-top: 120px;
+  /*margin-bottom: 48px;
+  margin-top: 72px;*/
 }
 
 .project-design h2 {
