--- a/css/style.css
+++ b/css/style.css
@@ -361,14 +361,15 @@ body {
   margin-top: 72px;*/
 }
 
+ 
 .project-design h2 {
   margin: 0px;
-  /* padding-top: 8px; */
+  padding-top: 8px; 
   font-family: 'Work Sans Semi-Bold', sans-serif;
   font-size: 32px;
   color: #17223b;
   text-align: left;
-  /* margin-bottom: 24px; */
+  margin-bottom: 24px;
 }
 
 .project-design p {
