--- a/css/style.css
+++ b/css/style.css
@@ -155,128 +155,6 @@ body {
   line-height: 1.5;
 }
 
-.about {
-  margin: auto;
-  max-width: 100%;
-  margin-left: 40px;
-  margin-right: 40px;
-  padding-top: 120px;
-}
-
-.about-grid {
-  display: block;
-  width: 100%;
-  max-width: 72%;
-}
-
-.about h2 {
-  margin: 0px;
-  padding-top: 8px;
-  font-family: 'Work Sans Semi-Bold', sans-serif;
-  font-size: 32px;
-  color: #17223b;
-  text-align: left;
-  margin-bottom: 32px;
-}
-.underline-magical-sub-header {
-  padding: 4px;
-  padding-bottom: 6px;
-  padding-left: 0px;
-  border-radius: 4px;
-  background-image: linear-gradient(60deg, #20BDFF 0%, #A5FECB 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.15em;
-  background-position: 0% 88%;
-  transition: 0.6s cubic-bezier(0.2, 0.8, 0.2, 1);
-}
-
-.underline-magical-sub-header:hover {
-  background-size: 100% 95%;
-  padding-bottom: 4px;
-  padding-top: 4px;
-  padding-left: 8px;
-  padding-right: 24px;
-  border-radius: 4px;
-  cursor: auto;
-}
-
-.about img {
-  width: 100%;
-  max-width: 320px;
-  height: inherit;
-  border-radius: 8px;
-  transition: 0.6s cubic-bezier(0.2, 0.8, 0.2, 1);
-  filter: grayscale(0.20);
-}
-  .about img:hover {
-  box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.1);
-  filter: grayscale(0);
-}
-  .about p {
-  margin: 0px;
-  padding-top: 18px;
-  font-family: 'Varela Round', sans-serif;
-  font-size: 20px;
-  color: #17223b;
-  text-align: left;
-  line-height: 2.0;
-}
-.about b {
-  margin: 0px;
-  padding: 8px;
-  font-family: 'Varela Round', sans-serif;
-  font-size: 20px;
-  color: #d32f2f;
-  text-align: left;
-  line-height: 2.0;
-  background-color: #f0f0f0;
-  border-radius: 4px;
-}
- 
-.button {
-  margin-top: 32px;
-  background-color: #e53935;
-  color: white;
-  padding: 16px 16px 16px 16px;
-  text-align: left;
-  font-family: 'Work Sans Bold', sans-serif;
-  font-size: 20px;
-  cursor: pointer;
-  border: none;
-  border-radius: 4px;
-  transition: 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
-  transition-delay: 0.05s;
-}
-
-.button:hover {
-  transform: rotate(-0.3deg);
-  background-color: #d32f2f;
-  padding: 16px 18px 16px 18px;
-  box-shadow: 0px 4px 12px #E0E0E0;
-  border-radius: 6px;
-}
-
-.footer {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  width: 100%;
-  background-color: #fff;
-  box-shadow: 0px -2px 4px #f0f0f0;
-  margin-top: 120px;
-  z-index: 1;
-}
-.footer span {
-  margin: auto;
-  margin: 8px;
-}
-.footer a {
-  margin: auto;
-  text-decoration: none;
-}
-
  
 /* Personal Info on landing Ending */
 .project-design {
@@ -386,10 +264,111 @@ body {
   text-transform: uppercase;
 }
 
+.about {
+  margin: auto;
+  max-width: 100%;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding-top: 120px;
+}
+
+.about-grid {
+  display: block;
+  width: 100%;
+  max-width: 72%;
+}
+
+.about h2 {
+  margin: 0px;
+  padding-top: 8px;
+  font-family: 'Work Sans Semi-Bold', sans-serif;
+  font-size: 32px;
+  color: #17223b;
+  text-align: left;
+  margin-bottom: 32px;
+}
+.underline-magical-sub-header {
+  padding: 4px;
+  padding-bottom: 6px;
+  padding-left: 0px;
+  border-radius: 4px;
+  background-image: linear-gradient(60deg, #20BDFF 0%, #A5FECB 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 0.15em;
+  background-position: 0% 88%;
+  transition: 0.6s cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+
+.underline-magical-sub-header:hover {
+  background-size: 100% 95%;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  padding-left: 8px;
+  padding-right: 24px;
+  border-radius: 4px;
+  cursor: auto;
+}
+
+.about img {
+  width: 100%;
+  max-width: 320px;
+  height: inherit;
+  border-radius: 8px;
+  transition: 0.6s cubic-bezier(0.2, 0.8, 0.2, 1);
+  filter: grayscale(0.20);
+}
+  .about img:hover {
+  box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.1);
+  filter: grayscale(0);
+}
+  .about p {
+  margin: 0px;
+  padding-top: 18px;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 20px;
+  color: #17223b;
+  text-align: left;
+  line-height: 2.0;
+}
+.about b {
+  margin: 0px;
+  padding: 8px;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 20px;
+  color: #d32f2f;
+  text-align: left;
+  line-height: 2.0;
+  background-color: #f0f0f0;
+  border-radius: 4px;
+}
+ 
+.button {
+  margin-top: 32px;
+  background-color: #e53935;
+  color: white;
+  padding: 16px 16px 16px 16px;
+  text-align: left;
+  font-family: 'Work Sans Bold', sans-serif;
+  font-size: 20px;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  transition: 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
+  transition-delay: 0.05s;
+}
+
+.button:hover {
+  transform: rotate(-0.3deg);
+  background-color: #d32f2f;
+  padding: 16px 18px 16px 18px;
+  box-shadow: 0px 4px 12px #E0E0E0;
+  border-radius: 6px;
+}
 
 #email {
   text-decoration: underline;
 }
+
 .footer {
   margin-left: auto;
   margin-right: auto;
@@ -410,6 +389,8 @@ body {
   margin: auto;
   text-decoration: none;
 }
+
+
 @media only screen and (max-width: 700px) {
   .landing-header {
     margin-left: 24px;
@@ -494,7 +475,7 @@ body {
     color: #727272;
   }
 
-  .projects {
+  .project-design {
     margin: auto;
     max-width: 90%;
     margin-left: 24px;
@@ -502,7 +483,7 @@ body {
     margin-bottom: 48px;
   }
 
-  .projects p {
+  .project-design p {
     margin: 0px;
     padding-top: 20px;
     font-family: 'Varela Round', sans-serif;
@@ -514,7 +495,7 @@ body {
     margin-bottom: 32px;
   }
 
-  .prjts {
+  .prjt {
     display: grid;
     grid-column-gap: 16px;
     grid-row-gap: 56px;
