--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,13 @@ body {
   border-radius: 4px 4px 0 0;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .card-title {
   margin: 0px;
   padding-left: 16px;
