--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ body {
 .project-design p {
   margin: 0px;
   padding-top: 24px;
-  font-family: 'Roboto Mono', sans-serif;
+  font-family: 'Zilla Slab', sans-serif;
   font-size: 20px;
   color: #373737;
   text-align: left;
@@ -295,7 +295,7 @@ body {
 .workexp-design p {
   margin: 0px;
   padding-top: 24px;
-  font-family: 'Roboto Mono', sans-serif;
+  font-family: 'Zilla Slab', sans-serif;
   font-size: 20px;
   color: #373737;
   text-align: left;
@@ -363,7 +363,7 @@ body {
   .about p {
   margin: 0px;
   padding-top: 18px;
-  font-family: 'Roboto Mono', sans-serif;
+  font-family: 'Zilla Slab', sans-serif;
   font-size: 20px;
   color: #17223b;
   text-align: left;
