--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,11 @@ body {
 }
 
 .top-background-white {
-  background-color: #FFFFFF;
+  background-color: #330000;
 }
 
 .top-background-grey {
-  background-color: #fafafa;
+  background-color: #3d0000;
   box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.1);
 }
 
