--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background-color: #e8e8e8;
+  background-color: #f5f5f5;
   margin: 0px;
 }
 
@@ -19,11 +19,11 @@ body {
 }
 
 .top-background-white {
-  background-color: #330000;
+  background-color: #FFFFFF;
 }
 
 .top-background-grey {
-  background-color: #3d0000;
+  background-color: #e3e3e3;
   box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.1);
 }
 
