--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,9 @@ body {
   margin: auto;
   max-width: 100%;
   margin-left: 40px;
-  /*margin-right: 40px;*/
+  
+  margin-right: 40px;
+  
   padding-top: 120px;
   margin-bottom: 48px;
   margin-top: 72px;*/
