--- a/css/style.css
+++ b/css/style.css
@@ -148,8 +148,10 @@ body {
   padding-top: 8px;
   font-family: 'Zilla Slab', sans-serif;
   font-weight: 400;
-  font-size: 28px;
+  font-size: 24px;
   color: #17223b;
+  margin-left: 40px;
+  margin-right: 50px;
   /*text-align: left;*/
   text-align: justify;
   text-justify: inter-word;
