--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ body {
 }
 
 #page-subheader {
-  margin: 0px;
+  margin: auto;
   padding-top: 8px;
   font-family: 'Zilla Slab', sans-serif;
   font-weight: 400;
