--- a/css/style.css
+++ b/css/style.css
@@ -144,14 +144,13 @@ body {
 }
 
 #page-subheader {
-  margin: auto;
+  margin: 0px;
+  max-width: 100%;
   padding-top: 8px;
   font-family: 'Zilla Slab', sans-serif;
   font-weight: 400;
   font-size: 24px;
   color: #17223b;
-  margin-left: 40px;
-  margin-right: 50px;
   /*text-align: left;*/
   text-align: justify;
   text-justify: inter-word;
