--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ body {
   margin-top: 240px;
   margin-bottom: 150px;
   margin-left: 40px;
+  margin-right: 50px;
 }
 
 #personal-tag {
@@ -185,8 +186,8 @@ body {
   margin: 0px;
   padding-top: 24px;
   font-family: 'Zilla Slab', sans-serif;
-  font-size: 20px;
-  color: #373737;
+  font-size: 24px;
+  color: #17223b;
   text-align: left;
   text-overflow: ellipsis;
   line-height: 1.5;
@@ -299,8 +300,8 @@ body {
   margin: 0px;
   padding-top: 24px;
   font-family: 'Zilla Slab', sans-serif;
-  font-size: 20px;
-  color: #373737;
+  font-size: 24px;
+  color: #17223b;
   text-align: left;
   text-overflow: ellipsis;
   line-height: 1.5;
@@ -367,7 +368,7 @@ body {
   margin: 0px;
   padding-top: 18px;
   font-family: 'Zilla Slab', sans-serif;
-  font-size: 20px;
+  font-size: 24px;
   color: #17223b;
   text-align: left;
   text-align: justify;
@@ -462,8 +463,8 @@ body {
   #page-subheader {
     margin: 0px;
     padding-top: 8px;
-    font-family: 'Zilla Slab', serif;
-    font-size: 22px;
+    font-family: 'Zilla Slab', sans-serif;
+    font-size: 24px;
     color: #17223b;
     /*text-align: left;*/
     text-align: justify;
@@ -534,9 +535,9 @@ body {
   .project-design p {
     margin: 0px;
     padding-top: 20px;
-    font-family: 'Varela Round', sans-serif;
-    font-size: 20px;
-    color: #373737;
+    font-family: 'Zilla Slab', sans-serif;
+    font-size: 24px;
+    color: #17223b;
     text-align: left;
     text-align: justify;
     text-justify: inter-word;
@@ -599,9 +600,9 @@ body {
   .workexp-design p {
     margin: 0px;
     padding-top: 20px;
-    font-family: 'Varela Round', sans-serif;
-    font-size: 20px;
-    color: #373737;
+    font-family: 'Zilla Slab', sans-serif;
+    font-size: 24px;
+    color: #17223b;
     /*text-align: left;*/
     text-align: justify;
     text-justify: inter-word;
