--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@ html {
 }
 
 body {
-  background-color: #f5f5f5;
+  /*background-color: #f5f5f5;*/
+  background-image: url(https://www.shutterstock.com/image-illustration/medical-background-hexagons-geometric-elements-design-1182779950);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   margin: 0px;
 }
 
