--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
   background-color: #f5f5f5;
-  background-image: url("./images/Website Background.png");
+  background-image: url("./images/Website Background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0px;
