--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ $green: rgba(169,160,50,.75);
 $yellow: rgba(252,171,55,.75);
 $brown: rgba(83,70,54,.75);
 
-h1hex {
+h4 {
   font-family: 'Lato', sans-serif;
   font-size: 4em;
   font-weight: 300;
@@ -330,7 +330,7 @@ section {
   overflow: hidden;
 } 
 
-.center {
+.centerhex {
   float: left;
   margin: 20px 10px;
   width: $width;
@@ -385,7 +385,7 @@ section {
   &.three {
     background: $brown;
   }
-  h2 {
+  h5 {
     margin: ($width - ($width / 4)) 20px 0 20px;
   }
   p {font-size: .5em; text-transform: lowercase;}
