--- a/css/Honeycomb.css
+++ b/css/Honeycomb.css
@@ -11,16 +11,12 @@ $green: rgba(169,160,50,.75);
 $yellow: rgba(252,171,55,.75);
 $brown: rgba(83,70,54,.75);
 
-h1 {
+h4 {
   font-family: 'Lato', sans-serif;
   font-size: 4em;
   font-weight: 300;
   text-align: center;
   margin: 100px 10px 0 10px;
-}
-
-body {
-  background: #fff;
 }
 
 section {
@@ -41,7 +37,7 @@ section {
   overflow: hidden;
 } 
 
-.center {
+.centerhex {
   float: left;
   margin: 20px 10px;
   width: $width;
