--- a/css/style.css
+++ b/css/style.css
@@ -194,14 +194,17 @@ body {
   line-height: 1.5;
   margin-bottom: 32px;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Bangers);
+
 *, *::before, *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 html {
-  font-family: Merriweather, Georgia, serif;
-  font-size: 62.5%;
+  font-family: Bangers, Georgia, serif;
+  font-size: 85%;
 }
 
 .hexagon {
@@ -395,9 +398,9 @@ html {
 .hexagontent {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 45%;
   transform: translate(-50%, -50%);
-  width: 140%;
+  width: 150%;
   font-size: 1.4rem;
   line-height: 1.2;
   z-index: 100;
