--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ body {
   margin-bottom: 32px;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Bangers);
+/*@import url(https://fonts.googleapis.com/css?family=Bangers);*/
 
 *, *::before, *::after {
   margin: 0;
@@ -203,7 +203,7 @@ body {
   box-sizing: border-box;
 }
 html {
-  font-family: Bangers, Georgia, serif;
+  font-family: 'Bangers', serif;
   font-size: 85%;
 }
 
